test/invalid/64371_missing_do_keyword/missing_do_keyword.agu
-- Author: 64371, Ricardo Costa

let x: Unit =
    let i: Int = 0; 
    while true set i = i + 1 -- syntax error: missing 'do' keyword
